fix: details image overflow

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -7,10 +7,6 @@ input:focus {
 }
 
 .details-header {
-  
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
   border-radius: 19px;
   border: 1px solid #f0c8d1;
   width: -webkit-fill-available;
@@ -33,45 +29,46 @@ input:focus {
 }
 
 .dot-overtaking {
-position: relative;
-width: 12px;
-height: 12px;
-border-radius: 6px;
-background-color: transparent;
-color: #ca5555;
-margin: -1px 0;
-box-shadow: 0 -20px 0 0;
-filter: blur(2px);
-animation: dot-overtaking 2s infinite cubic-bezier(0.2, 0.6, 0.8, 0.2);
+  position: relative;
+  width: 12px;
+  height: 12px;
+  border-radius: 6px;
+  background-color: transparent;
+  color: #ca5555;
+  margin: -1px 0;
+  box-shadow: 0 -20px 0 0;
+  filter: blur(2px);
+  animation: dot-overtaking 2s infinite cubic-bezier(0.2, 0.6, 0.8, 0.2);
 }
-.dot-overtaking::before, .dot-overtaking::after {
-content: "";
-display: inline-block;
-position: absolute;
-top: 0;
-left: 0;
-width: 12px;
-height: 12px;
-border-radius: 6px;
-background-color: transparent;
-color: #ca5555;
-box-shadow: 0 -20px 0 0;
-filter: blur(2px);
+.dot-overtaking::before,
+.dot-overtaking::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 12px;
+  height: 12px;
+  border-radius: 6px;
+  background-color: transparent;
+  color: #ca5555;
+  box-shadow: 0 -20px 0 0;
+  filter: blur(2px);
 }
 .dot-overtaking::before {
-animation: dot-overtaking 2s infinite cubic-bezier(0.2, 0.6, 0.8, 0.2);
-animation-delay: 0.3s;
+  animation: dot-overtaking 2s infinite cubic-bezier(0.2, 0.6, 0.8, 0.2);
+  animation-delay: 0.3s;
 }
 .dot-overtaking::after {
-animation: dot-overtaking 1.5s infinite cubic-bezier(0.2, 0.6, 0.8, 0.2);
-animation-delay: 0.6s;
+  animation: dot-overtaking 1.5s infinite cubic-bezier(0.2, 0.6, 0.8, 0.2);
+  animation-delay: 0.6s;
 }
 
 @keyframes dot-overtaking {
-0% {
-  transform: rotateZ(0deg);
-}
-100% {
-  transform: rotateZ(360deg);
-}
+  0% {
+    transform: rotateZ(0deg);
+  }
+  100% {
+    transform: rotateZ(360deg);
+  }
 }
